--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
             </div>
             <div class="col-auto">
               <small>
-                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/dewanakl/undangan">Faizmuhiq</a> <i class="fa-brands fa-youtube me-1"></i
+                <i class="fa-brands fa-github me-1"></i><a target="_blank" href="https://github.com/Faizalmuhamadiqbal27/webweddingibalriska/">Faizmuhiq</a> <i class="fa-brands fa-youtube me-1"></i
                 ><a target="_blank" href="https://www.youtube.com/watch?v=1WCIrw85zbQ">I Wanna Grow Old with You</a>
               </small>
             </div>
